--- a/public/login.html
+++ b/public/login.html
@@ -322,7 +322,7 @@ $(".tab a").on("click", function(e) {
       </div>
         <div id="login">   
           <h1>Welcome!</h1>
-          <form action="globe_test.html" method="get" target="_blank" id="page">
+          <form action="login" method="post" target="_blank" id="page">
 
           <div class="field-wrap">
            <label>
@@ -330,7 +330,7 @@ $(".tab a").on("click", function(e) {
             </label>
             <!-- <input type="country"required autocomplete="off"/> -->
             <!-- <input type="text" name="country"> -->
-            <select name="country" form="page">
+            <select name="username" form="page">
               <option value="DPRK">DPRK</option>
               <option value="USA">USA</option>
               <option value="ROK">Republic of Korea</option>
