--- a/public/globe_test.html
+++ b/public/globe_test.html
@@ -165,14 +165,6 @@
                     "enemy": checkedList
                 }
             );
-            // Update enemyList
-            $.get(`${serverURL}/enemyList`, { country: myCountry}, function (data, status) {
-                d3.select("#friendOrEnemyContainer").selectAll("input")
-                    .filter(function (d) { 
-                        return data.includes(d);
-                    })
-                    .property("checked", true);
-            });
         });
     friendOrEnemyCheckbox.append("label")
         .style("color", "white")
@@ -968,6 +960,13 @@
                 .style("display", "block")
                 .html("Buy Troops<br>$" + data.troopCost + " / unit");
             d3.select("#moneyMonitor").html("Money: "+data.money);
+        });        // Update enemyList
+        $.get(`${serverURL}/enemyList`, { country: myCountry}, function (data, status) {
+            d3.select("#friendOrEnemyContainer").selectAll("input")
+                .filter(function (d) { 
+                    return data.includes(d);
+                })
+                .property("checked", true);
         });
     }, 1000);
     function updateTechTree(){
