--- a/public/globe_test.html
+++ b/public/globe_test.html
@@ -3,18 +3,17 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styling.css">
     <link rel="stylesheet" type="text/css" href="switch.css">
-    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='Pacifico.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <script src="http://d3js.org/d3.v5.min.js"></script>
-    <script src="http://d3js.org/topojson.v3.min.js"></script>
-    <script src="https://d3js.org/d3-array.v1.min.js"></script>
-    <script src="https://d3js.org/d3-geo.v1.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://d3js.org/d3-queue.v3.min.js"></script>
-    <script src="https://d3js.org/d3-request.v1.min.js"></script>
-    <script src="https://d3js.org/d3-transition.v1.min.js"></script>
-    <script src="https://d3js.org/d3-zoom.v1.min.js"></script>
+    <script src="d3.v5.min.js"></script>
+    <script src="topojson.v3.min.js"></script>
+    <script src="d3-array.v1.min.js"></script>
+    <script src="d3-geo.v1.min.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="d3-queue.v3.min.js"></script>
+    <script src="d3-request.v1.min.js"></script>
+    <script src="d3-transition.v1.min.js"></script>
     <script>
     var body = d3.select("body");
     var titleDiv = body.append("div")
@@ -284,8 +283,8 @@
         .style("opacity", 0);
     // asynchronous task assignment.
     d3.queue()
-        .defer(d3.json, "https://raw.githubusercontent.com/jonataswalker/map-utils/master/data/json/world-110m.json")
-        .defer(d3.json, "https://raw.githubusercontent.com/DixonCider/fongmun2017/master/places.json")
+        .defer(d3.json, "world-110m.json")
+        .defer(d3.json, "places.json")
         .await(ready);
     // svg -> defs: graphical macro for later use (not rendered immdiately)
     var emptyGeoCircle = d3.geoCircle().radius(0)();
