--- a/public/login.html
+++ b/public/login.html
@@ -333,7 +333,7 @@ $(".tab a").on("click", function(e) {
             <select name="username" form="page">
               <option value="DPRK">DPRK</option>
               <option value="USA">USA</option>
-              <option value="ROK">Republic of Korea</option>
+              <option value="Korea">Republic of Korea</option>
               <option value="USSR">USSR</option>
               <option value="PRC">PRC</option>
               <option value="Japan">Japan</option>
