--- a/globe_test.html
+++ b/globe_test.html
@@ -196,6 +196,14 @@
         .style("position", "absolute")
         .style("top", "1%")
         .html("Tech Tree Development");
+    svgTechDiv.append("div")
+        .style("width", "100%")
+        .style("position", "absolute")
+        .style("bottom", "22%")
+        .append("p")
+        .style("font-family", "Times New Roman")
+        .style("font-size", "1px")
+        .html("Images are used purely for educational purpose. Riot Games (C) owns and holds the right to distribute the materiel.");
     var svgTechNuclear = svgTechDiv.append("div")
         .attr("id", "nuclearDiv")
         .style("opacity", "0")
