fix misspelling & redundant code

--- a/public/globe_test.html
+++ b/public/globe_test.html
@@ -113,7 +113,7 @@
         .on("mouseup", moveDestination);
 
     
-    const totalCountryList = ["DPRK", "USA", "Korea", "Russia", "ROC", "Japan", "Mexico", "India", "Phillipines", "Vietnam"];
+    const totalCountryList = ['DPRK', 'USA', 'Korea', 'Russia', 'PRC', 'Japan', 'Mexico', 'India', 'Philippines', 'Vietnam'];
     /*
     var createContainer = d3.select("body").append("div")
         .style("position", "absolute")
